5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1692_1100.log
== TEST (2019-04-25 14:34:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:34:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:34:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:36:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada: ")
	if (ceduula != 5 and 10 and 2 and 20 and 50 and 100)


-- ERROR:
File "XXXX", line 6
    if (ceduula != 5 and 10 and 2 and 20 and 50 and 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:36:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada: ")
		if (ceduula != 5 and 10 and 2 and 20 and 50 and 100)


-- ERROR:
File "XXXX", line 6
    if (ceduula != 5 and 10 and 2 and 20 and 50 and 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:36:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada: ")
	
	if (ceduula != 5 and 10 and 2 and 20 and 50 and 100)


-- ERROR:
File "XXXX", line 7
    if (ceduula != 5 and 10 and 2 and 20 and 50 and 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:36:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada: ")
	
	if(ceduula != 5 and 10 and 2 and 20 and 50 and 100)


-- ERROR:
File "XXXX", line 7
    if(ceduula != 5 and 10 and 2 and 20 and 50 and 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:36:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada: ")
	
	if(ceduula = 5 and 10 and 2 and 20 and 50 and 100)


-- ERROR:
File "XXXX", line 7
    if(ceduula = 5 and 10 and 2 and 20 and 50 and 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:37:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entradas:", ceduula)


-- OUTPUT:
Entradas: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:37:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)


-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:38:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	print ("invalido")

-- OUTPUT:
Entrada: 100
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:38:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	print ("invalido")

-- OUTPUT:
Entrada: 100
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:40:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 5):
		print("Animal: Tartaruga")

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:45:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 2):
		print("Animal: Tartaruga")
	elif (ceduula == 5):
		print("Animal: Garca")
	elif (ceduula == 10):
		print("Animal: Arara")
	elif (ceduula == 20):
		print("Animal: Mico-leao-dourado")
	elif (ceduula == 50):
		print("Animal: Onca-pintada")
	else:
		print("Garoupa")
else:
	print("Animal: Invalido")

-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:45:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 2):
		print("Animal: Tartaruga")
	elif (ceduula == 5):
		print("Animal: Garca")
	elif (ceduula == 10):
		print("Animal: Arara")
	elif (ceduula == 20):
		print("Animal: Mico-leao-dourado")
	elif (ceduula == 50):
		print("Animal: Onca-pintada")
	elif (ceduula == 100):
		print("Garoupa")
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:46:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 2):
		print("Animal: Tartaruga")
	elif (ceduula == 5):
		print("Animal: Garca")
	elif (ceduula == 10):
		print("Animal: Arara")
	elif (ceduula == 20):
		print("Animal: Mico-leao-dourado")
	elif (ceduula == 50):
		print("Animal: Onca-pintada")
	elif (ceduula == 100):
		print("Garoupa")
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 14:47:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 2):
		print("Animal: Tartaruga")
	elif (ceduula == 5):
		print("Animal: Garca")
	elif (ceduula == 10):
		print("Animal: Arara")
	elif (ceduula == 20):
		print("Animal: Mico-leao-dourado")
	elif (ceduula == 50):
		print("Animal: Onca-pintada")
	elif (ceduula == 100):
		print("Garoupa")
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.135967
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:47:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 2):
		print("Animal: Tartaruga")
	elif (ceduula == 5):
		print("Animal: Garca")
	elif (ceduula == 10):
		print("Animal: Arara")
	elif (ceduula == 20):
		print("Animal: Mico-leao-dourado")
	elif (ceduula == 50):
		print("Animal: Onca-pintada")
	elif (ceduula == 100):
		print("Garoupa")
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 14:47:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 2):
		mensagem = "Tartaruga"
		print("Animal:" , mensagem)
	elif (ceduula == 5):
		print("Animal: Garca")
	elif (ceduula == 10):
		print("Animal: Arara")
	elif (ceduula == 20):
		print("Animal: Mico-leao-dourado")
	elif (ceduula == 50):
		print("Animal: Onca-pintada")
	elif (ceduula == 100):
		print("Garoupa")
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.143819
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 14:51:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula != 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 2):
		mensagem = "Tartaruga"
		print("Animal:" , mensagem)
	elif (ceduula == 5):
		mensagem = "Garca"
		print("Animal:" , mensagem)
	elif (ceduula == 10):
		mensagem = "Arara"
		print("Animal:" , mensagem)
	elif (ceduula == 20):
		mensagem = "Mico-leao-dourado"
		print("Animal:" , mensagem)
	elif (ceduula == 50):
		mensagem = "onca-pintada"
		print("Animal:" , mensagem)
	elif (ceduula == 100):
		mensagem = "Garoupa"
		print("Animal:" , mensagem)
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.120844
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 14:52:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula /= 5 and 2 and 10 and 20 and 50 and 100):
	if (ceduula == 2):
		mensagem = "Tartaruga"
		print("Animal:" , mensagem)
	elif (ceduula == 5):
		mensagem = "Garca"
		print("Animal:" , mensagem)
	elif (ceduula == 10):
		mensagem = "Arara"
		print("Animal:" , mensagem)
	elif (ceduula == 20):
		mensagem = "Mico-leao-dourado"
		print("Animal:" , mensagem)
	elif (ceduula == 50):
		mensagem = "onca-pintada"
		print("Animal:" , mensagem)
	elif (ceduula == 100):
		mensagem = "Garoupa"
		print("Animal:" , mensagem)
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.209736
-- ERROR:
  File "/home/codebench/codes/1692/1100/main.py", line 6
    if (ceduula /= 5 and 2 and 10 and 20 and 50 and 100):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:52:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula = 5 or 2 or 10 or 20 or 50 or 100):
	if (ceduula == 2):
		mensagem = "Tartaruga"
		print("Animal:" , mensagem)
	elif (ceduula == 5):
		mensagem = "Garca"
		print("Animal:" , mensagem)
	elif (ceduula == 10):
		mensagem = "Arara"
		print("Animal:" , mensagem)
	elif (ceduula == 20):
		mensagem = "Mico-leao-dourado"
		print("Animal:" , mensagem)
	elif (ceduula == 50):
		mensagem = "onca-pintada"
		print("Animal:" , mensagem)
	elif (ceduula == 100):
		mensagem = "Garoupa"
		print("Animal:" , mensagem)
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- ERROR:
File "XXXX", line 6
    if (ceduula = 5 or 2 or 10 or 20 or 50 or 100):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 14:52:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula == 5 or 2 or 10 or 20 or 50 or 100):
	if (ceduula == 2):
		mensagem = "Tartaruga"
		print("Animal:" , mensagem)
	elif (ceduula == 5):
		mensagem = "Garca"
		print("Animal:" , mensagem)
	elif (ceduula == 10):
		mensagem = "Arara"
		print("Animal:" , mensagem)
	elif (ceduula == 20):
		mensagem = "Mico-leao-dourado"
		print("Animal:" , mensagem)
	elif (ceduula == 50):
		mensagem = "onca-pintada"
		print("Animal:" , mensagem)
	elif (ceduula == 100):
		mensagem = "Garoupa"
		print("Animal:" , mensagem)
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 14:52:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("digite valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula == 5 or 2 or 10 or 20 or 50 or 100):
	if (ceduula == 2):
		mensagem = "Tartaruga"
		print("Animal:" , mensagem)
	elif (ceduula == 5):
		mensagem = "Garca"
		print("Animal:" , mensagem)
	elif (ceduula == 10):
		mensagem = "Arara"
		print("Animal:" , mensagem)
	elif (ceduula == 20):
		mensagem = "Mico-leao-dourado"
		print("Animal:" , mensagem)
	elif (ceduula == 50):
		mensagem = "onca-pintada"
		print("Animal:" , mensagem)
	elif (ceduula == 100):
		mensagem = "Garoupa"
		print("Animal:" , mensagem)
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.117317
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 14:56:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ceduula = int(input("valor da cedula: "))
print("Entrada:", ceduula)
if (ceduula == 5 or 2 or 10 or 20 or 50 or 100):
	if (ceduula == 2):
		mensagem = "Tartaruga"
		print("Animal:" , mensagem)
	elif (ceduula == 5):
		mensagem = "Garca"
		print("Animal:" , mensagem)
	elif (ceduula == 10):
		mensagem = "Arara"
		print("Animal:" , mensagem)
	elif (ceduula == 20):
		mensagem = "Mico-leao-dourado"
		print("Animal:" , mensagem)
	elif (ceduula == 50):
		mensagem = "Onca-pintada"
		print("Animal:" , mensagem)
	elif (ceduula == 100):
		mensagem = "Garoupa"
		print("Animal:" , mensagem)
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.190264
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
